objects/Trial_Usage__c.object
<CustomObject>
    <fields>
        <fullName>PL_PLC_Practice_Area__c</fullName>
        <label>PL\PLC Practice Area</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PL_PLC_Resource_Type__c</fullName>
        <label>PL\PLC Resource Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PL_PLC_Title__c</fullName>
        <label>PL\PLC Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Trial__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trial</label>
        <referenceTo>Trial__c</referenceTo>
        <relationshipLabel>Trial Usage Information Top 3; WL/WLE per feature, PL/PLC for each attribute</relationshipLabel>
        <relationshipName>Trial_Usages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WL_WLE_Features__c</fullName>
        <label>WL\WLE Features</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>WL_WLE_Material_Descriptions__c</fullName>
        <label>WL\WLE Material Descriptions</label>
        <type>TextArea</type>
    </fields>
    <label>Trial Usage</label>
    <nameField>
        <displayFormat>TrialUsage-{000}</displayFormat>
        <label>Trial Usage Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trial Usages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>